<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true">


    <RatingBar
        android:id="@+id/rrRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:maxHeight="16dp"
        android:minHeight="16dp"
        android:progressDrawable="@drawable/custom_ratingbar"
        android:rating="4"
        android:stepSize="0.1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textColor="@color/accent"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:text="Reaturant Name" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:layout_marginTop="10dp"
            android:paddingBottom="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/rrName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_restaurand_name" />

            <requestFocus />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:paddingBottom="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/rrAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:paddingBottom="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/rrPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:paddingBottom="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/rrWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_website" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>
