<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity$PlaceholderFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/randImg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:baselineAlignBottom="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/rest_card" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_hint"
        android:id="@+id/detailAddress"
        android:layout_below="@+id/randImg"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/randTitle"
        android:layout_below="@+id/detailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        tools:text="The Supper Restaurant" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/randTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/results_retry_button"
            android:elevation="4dp"
            android:id="@+id/randAgain"
            android:layout_weight="1"
            android:background="@drawable/button_primary_color_selector"
            android:layout_margin="5dp"
            android:textColor="@color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/results_ok_button"
            android:elevation="4dp"
            android:id="@+id/randOK"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/button_accent_color_selector"
            android:layout_margin="5dp" />
    </LinearLayout>

</RelativeLayout>
